# COVID-19_Consultation_chatbot

./: .env  README.md  docker-compose.yml  requirements.txt
chatbot_api/: pyproject.toml
chatbot_api/src/: main.py
chatbot_api/src/LLM_generated_engine/: LLM_engine.py  search_engine.py
chatbot_api/src/Output/: faiss_index.index  metadata.pkl
chatbot_api/src/chains/: covid19_consultant_chain.py  user_info_extract_chain.py
chatbot_api/src/models/: chatbot_query_model.py  user_request.py
chatbot_api/src/user_management/: chat_graph.py
chatbot_api/src/vector_search/: search.py
chatbot_frontend/src/: entrypoint.sh  main.py
